# Copyright 2022 Matthew James Kraai

# This file is part of books.

# books is free software: you can redistribute it and/or modify it
# under the terms of the GNU Affero General Public License as
# published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.

# books is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
# or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Affero General
# Public License for more details.

# You should have received a copy of the GNU Affero General Public
# License along with books.  If not, see
# <https://www.gnu.org/licenses/>.

[package]
name = "books"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
clap = { version = "3", features = ["derive"] }
directories = "4"
pager = "0.16"
rusqlite = "0.27"
